Исправил! Домашнее задание № 1

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Веб Студия</title>
 </head>
 <body>
+
 <!-- Шапка страницы -->
     <header>
         <nav>
-            <a href="">WebStudio</a>
+            <a href="#">WebStudio</a>
 
             <ul>
                 <li>Студия</li>
@@ -28,17 +29,16 @@
     <main>
         
 <!-- Герой страницы -->
-
         <section>
 
-            <img src="" alt="Фон" >
+            <img src="#" alt="Фон" >
             <h1>Эффективные решения для вашего бизнеса</h1>
 
             <button>Заказать услугу</button>
+
         </section>
 
 <!-- Организация работы -->
-
         <section>
             <ul>
                 <li>
@@ -61,7 +61,6 @@
         </section>
 
 <!-- Деятельность -->
-
         <section>
             <h2>Чем мы занимаемся</h2>
                 <ul>
@@ -78,7 +77,6 @@
         </section>
 
 <!-- Наша команда -->
-
         <section>
             <h2>Наша команда</h2>
             <ul>
@@ -86,7 +84,6 @@
                     <img src="./img/team/card1.jpg" alt="Игорь_Демьяненко" height="270px" width="260px">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
-                   
                 </li>
                 <li>
                     <img src="./img/team/card2.jpg" alt="Ольга_Репина" height="270px" width="260px">
@@ -97,22 +94,20 @@
                     <img src="./img/team/card3.jpg" alt="Николай_Тарасов" height="270px" width="260px">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
-                </li><li>
+                </li>
+                <li>
                     <img src="./img/team/card4.jpg" alt="Михаил_Ермаков" height="270px" width="260px">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
-
         </section>
-
 
     </main>
 
 <!-- Подвал страницы-->
-
         <footer>
-                <a href="">Web Studio</a>
+                <a href="#">Web Studio</a>
                 <address>
                 г. Киев, пр-т Леси Украинки, 26 <br>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
